# rpai

./: .gitignore  Cargo.toml  README.md  debug_processes.rs  install.sh  rpai.tmux
src/: main.rs  test_status.rs
