[package]
name = "rpai"
version = "0.1.0"
edition = "2021"
description = "A TUI for managing AI coding agent sessions in tmux"
license = "MIT"
repository = "https://github.com/yourusername/rpai"
readme = "README.md"

include = [
    "src/**/*",
    "rpai.tmux",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
sysinfo = "0.32"
dirs = "5.0"
crossterm = "0.28"
ratatui = "0.29"

[[bin]]
name = "rpai"
path = "src/main.rs"

[package.metadata.scripts]
# Note: rpai.tmux needs to be manually copied after install
# cargo install --path . && cp rpai.tmux ~/.cargo/bin/
