[package]
name = "rpai"
version = "0.1.0"
edition = "2021"
description = "A TUI for managing AI coding agent sessions in tmux"
license = "MIT"
repository = "https://github.com/radoslav11/rpai"
readme = "README.md"
keywords = ["tmux", "tui", "ai", "opencode", "claude"]
categories = ["command-line-utilities", "development-tools"]

include = [
    "src/**/*",
    "rpai.tmux",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
sysinfo = "0.32"
dirs = "5.0"
crossterm = "0.28"
ratatui = "0.29"

[[bin]]
name = "rpai"
path = "src/main.rs"
