[package]
name = "rpai"
version = "0.1.12"
edition = "2021"
description = "Tool to make it easier to jump between AI agents in tmux."
license = "MIT"
repository = "https://github.com/radoslav11/rpai"
readme = "README.md"
keywords = ["tmux", "tui", "ai", "opencode", "claude"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
sysinfo = "0.32"
crossterm = "0.28"
ratatui = "0.29"

[[bin]]
name = "rpai"
path = "src/main.rs"
